envs/sbx/flux-system/network-policy.yaml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: "block-nginx"
  namespace: nginx-namespace
specs:
  - endpointSelector:
      matchLabels:
        app: nginx
    ingress:
      - fromEndpoints:
          - matchLabels:
              blocked: "true"
